--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,41 +2,50 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#009688"
     tools:context=".ImageActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="270dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
-        android:id="@+id/arrynImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginBottom="512dp"
-        android:contentDescription="House Arryn of the Eyrie"
+        android:id="@+id/displayImage"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="118dp"
+        android:layout_marginBottom="84dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/arryn" />
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/imageName"
+        android:id="@+id/displayName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
-        android:layout_marginBottom="292dp"
-        android:text="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="165dp"
+        android:layout_marginBottom="11dp"
+        android:text="House Name"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/displayDescription"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/imageDescription"
+        android:id="@+id/displayDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginBottom="250dp"
-        android:text="Description"
+        android:layout_marginStart="148dp"
+        android:layout_marginBottom="25dp"
+        android:text="House Description"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
